# Mutation-Simulator

./: .gitignore  README.md  environment.yml  mutation-simulator.py  performance-comparison.md  pyproject.toml
Example RMT files/: Danio_rerio.rmt  Drosophila_melanogaster.rmt  Homo_sapiens.rmt  Mus_musculus.rmt  gff3_genes_2_rmt.py
Test/: test.rmt
data/Example RMT files/: Arabidopsis_thaliana.rmt
data/scripts/: gff_genes_2_rmt.py
mutation_simulator/: __init__.py  __main__.py  argument_parser.py  bedpe_writer.py  colors.py  defaults.py  fasta_writer.py  it_mutator.py  mut_types.py  mutator.py  rmt.py  util.py  vcf_writer.py
