[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Mutation-Simulator"
dynamic = ["version"]
authors = [{name= "Marius Kühl"}]
description = "A tool for simulating random mutations in any genome"
readme = "README.md"
license = {file="LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: POSIX :: Linux"
	]
keywords = [
	"Mutation",
	"Simulation",
	"Genome",
	"SNP",
	"SNPs",
	"SV",
	"SVs",
	"Bioinformatics"
	]

requires-python = ">=3.10"
dependencies = [
	"numpy",
	"pyfaidx",
	"tqdm"
]

[project.urls]
Homepage = "https://github.com/mkpython3/Mutation-Simulator"
Bug-Tracker = "https://github.com/mkpython3/Mutation-Simulator/issues"
RMT-Documentation = "https://github.com/mkpython3/Mutation-Simulator/blob/master/rmt-docs.pdf"

[project.scripts]
mutation-simulator = "mutation_simulator.__main__:main"

[tool.flit.module]
name = "mutation_simulator"

# [tool.flit.sdist]
# include = ["data/", "rmt-docs.pdf"]

[tool.yapf]
based_on_style = "pep8"
use_tabs = true
INDENT_WIDTH = 4
CONTINUATION_INDENT_WIDTH = 8
CONTINUATION_ALIGN_STYLE = "fixed"
